--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -39,7 +39,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Authorization $http_authorization;
     }
-    # [✨ 여기 추가됨] AI 요청 처리
+    # AI 요청 처리
     location /ai {
         proxy_pass http://backend:8080;
         proxy_http_version 1.1;
@@ -89,6 +89,17 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
-        error_page 404 = /index.html;
+        # SPA 라우팅 처리
+        try_files $uri /index.html;
+    }
+
+    # 챗봇 API proxy
+    location /chat/ {
+        proxy_pass http://chatbot:8000/chat/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
