--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,7 +94,9 @@ jobs:
             # Chatbot
             PINECONE_ENVIRONMENT=us-east-1
             INDEX_NAME=ddauction-db
+            #URL
             CHATBOT_URL=http://chatbot:8000
+            BACKEND_URL=http://backend:8080
             # AWS S3
             AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
