--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,5 +10,7 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
+# 커스텀 Nginx 설정 추가
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
