--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -58,6 +58,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # OAuth 인증 시작 경로 proxy
+    location /oauth2/authorization/ {
+        proxy_pass http://backend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # OAuth 콜백
     location /login/oauth2/code/ {
         proxy_pass http://backend:8080;
