소셜로그인 오류 #5

--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -51,6 +51,7 @@ server {
 
     # 소셜로그인 proxy
     location /oauth2/ {
+        default_type text/html;
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -60,6 +61,7 @@ server {
 
     # OAuth 인증 시작 경로 proxy
     location /oauth2/authorization/ {
+        default_type text/html;
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
