--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -71,6 +71,7 @@ server {
 
     # OAuth 콜백
     location /login/oauth2/code/ {
+        default_type text/html;
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
