소셜로그인 오류 #9

--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -51,32 +51,35 @@ server {
 
     # 소셜로그인 proxy
     location /oauth2/ {
-        default_type text/html;
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_hide_header Content-Type;
+        add_header Content-Type "text/html; charset=utf-8" always;
     }
 
     # OAuth 인증 시작 경로 proxy
     location /oauth2/authorization/ {
-        default_type text/html;
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_hide_header Content-Type;
+        add_header Content-Type "text/html; charset=utf-8" always;
     }
 
     # OAuth 콜백
     location /login/oauth2/code/ {
-        default_type text/html;
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_hide_header Content-Type;
+        add_header Content-Type "text/html; charset=utf-8" always;
     }
 
     # WebSocket proxy
