--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -49,7 +49,18 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 소셜로그인 proxy
+    # OAuth2 리다이렉트 (프론트엔드 라우트)
+    location = /oauth2/redirect {
+        proxy_pass http://frontend:80;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # 소셜로그인 proxy (백엔드)
     location /oauth2/ {
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
