--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^24.7.2",
     "@types/react": "^19.1.16",
     "@types/react-datepicker": "^6.2.0",
