텍스트크기설정함

--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -23,6 +23,16 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    # 요청 크기 제한 
+    client_max_body_size 50M;
+    client_body_buffer_size 50M;
+    
+    # 타임아웃 설정
+    proxy_connect_timeout 300s;
+    proxy_send_timeout 300s;
+    proxy_read_timeout 300s;
+    send_timeout 300s;
+
     # Nginx 헤더 크기 제한
     large_client_header_buffers 4 32k;
 
@@ -38,6 +48,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Authorization $http_authorization;
+
+        # 버퍼링 설정 추가
+        proxy_buffering off;
+        proxy_request_buffering off;
+        
+        # 타임아웃 개별 설정
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
     }
     # AI 요청 처리
     location /ai {
@@ -47,6 +66,13 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # AI 요청은 시간이 오래 걸릴 수 있음
+        proxy_connect_timeout 600s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
+        proxy_buffering off;
+        proxy_request_buffering off;
     }
 
     # OAuth2 리다이렉트 (프론트엔드 라우트)
@@ -114,6 +140,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # 챗봇도 시간이 걸릴 수 있음
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+        proxy_buffering off;
     }
 
     # React SPA 서빙 (Frontend)
