EmailVerification에 인증여부 확인용 컬럼 추가, 컨트롤러 (/signup 이메일발송), (/verify-email 이메일 인증), (/register 회원가입) ,(redisconfig, verifipage tsx 삭제여부 확인),
# Conflicts:
#	backend/src/main/java/com/my/backend/myjwt/JWTFilter.java
#	frontend/package-lock.json
#	frontend/src/App.tsx
#	frontend/src/common/import.ts

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     implementation 'com.google.zxing:core:3.5.1'
     implementation 'com.google.zxing:javase:3.5.1'
 
+    // 이메일 전송용
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
