--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@zxing/browser": "^0.1.5",
+    "axios": "^1.13.2",
     "build": "^0.1.4",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
