--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -141,11 +141,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # 챗봇도 시간이 걸릴 수 있음
-        proxy_connect_timeout 300s;
-        proxy_send_timeout 300s;
-        proxy_read_timeout 300s;
-        proxy_buffering off;
+        # # 챗봇도 시간이 걸릴 수 있음
+        # proxy_connect_timeout 300s;
+        # proxy_send_timeout 300s;
+        # proxy_read_timeout 300s;
+        # proxy_buffering off;
     }
 
     # React SPA 서빙 (Frontend)
