--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -67,7 +67,7 @@ file:
     directory: ./uploads
 
 # ===================================
-# RAG API 설정
+# API 설정
 # ===================================
 rag:
   api:
@@ -75,6 +75,9 @@ rag:
     timeout:
       connect: 15000 # 연결 타임아웃 (ms) - 15초
       read: 60000 # 읽기 타임아웃 (ms) - 60초
+nts:
+  api:
+    key: ${NTS_API_KEY}
 
 # ===================================
 # 로컬 환경
