--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -34,11 +34,5 @@ scipy>=1.11.4
 pillow>=10.0.0
 python-multipart>=0.0.6
 
-# CPU 전용 PyTorch + torchvision + torchaudio
-torch==2.1.1+cpu
-torchvision==0.16.1+cpu
-torchaudio==2.3.2+cpu
--f https://download.pytorch.org/whl/cpu/torch_stable.html
-
 # Transformers (CLIP)
-transformers==4.40.0
+transformers>=4.40.0
