--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -60,7 +60,7 @@ server {
     }
     # AI 요청 처리
     location /ai {
-        proxy_pass http://backend:8080;
+        proxy_pass http://chatbot:8000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
