ai벡앤드주소변경함remove-bg,챗봇환경변수추가함

--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -26,6 +26,7 @@ services:
     environment:
       TZ: "Asia/Seoul"
       # 환경 변수
+      BACKEND_URL: http://backend:8080
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       PINECONE_API_KEY: ${PINECONE_API_KEY}
