--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "build": "^0.1.4",
     "date-fns": "^4.1.0",
+    "fast-average-color": "^9.5.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
